# bt_ai_core

./: Cargo.toml
config/ai/: ai-config.yml
src/: ai_chat_helper.rs  ai_config.rs  ai_stream_helper.rs  ai_tool_to_call.rs  ai_tools.rs  lib.rs  message.rs  model_configs.rs  parameter_names.rs
