[package]
name = "bt_ai_core"
version = "0.2.0"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "BachueTech AI Core"

[dependencies]
bt_app_codes = { git = "https://github.com/bachuetech/bt_app_codes.git", version = "0.1.0" }
bt_file_utils = "0.1.3"
bt_http_utils = "0.7.1"
bt_logger = "0.3.1"
bt_yaml_utils = "0.1.12"
serde = { version ="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
yaml-rust2 = "0.11.0"
