[package]
name = "bt_ai_core"
version = "0.2.1"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "BachueTech AI Core"

[dependencies]
bt_app_codes = { git = "https://github.com/bachuetech/bt_app_codes.git", version = "0.1.0" }
bt_file_utils = "0.1.3"
bt_http_utils = "0.7.2"
bt_logger = "0.3.2"
bt_string_utils = "0.2.9"
bt_yaml_utils = "0.1.14"
rand = "0.9.2"
serde = { version ="1.0.228", features = ["derive"]}
serde_json = "1.0.149"
yaml-rust2 = "0.11.0"
